k8s-files/kubernetes/istio-gateway-api/files/01-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio-gatewayclass-intranet
spec:
  controllerName: istio.io/gateway-controller
  description: Intranet Gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio-gatewayclass-internet
spec:
  controllerName: istio.io/gateway-controller
  description: Internet Gateway
