k8s-files/kubernetes/istio-gateway-api/files/02-gateway.yaml
#############
## Intranet #
#############
apiVersion: v1
kind: Namespace
metadata:
  name: istio-intranet
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-intranet
  namespace: istio-intranet
spec:
  gatewayClassName: istio-gatewayclass-intranet
  infrastructure:
    labels:
      app: istio-gateway
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-intranet-config  
  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All  #or All or Selector
---

#############
## Internet #
#############
apiVersion: v1
kind: Namespace
metadata:
  name: istio-internet
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internet
  namespace: istio-internet
spec:
  gatewayClassName: istio-gatewayclass-internet
  infrastructure:
    labels:
      app: istio-gateway
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-internet-config  
  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All  #or All or Selector
